2008-07-24  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	* src/gui/PreferencesUI.cc:
	Remove old Encodings interface.

2008-07-24  kitone  <kitone@gna.org>

	* share/glade/dialog-character-codings.glade:
	* src/Makefile.am:
	Add new files. (DialogCharacterCodings & glade)
	
	* src/gui/DialogCharacterCodings.cc:
	* src/gui/DialogCharacterCodings.h:
	Add a new dialog for managing the character codings.

	* src/gui/DialogFileChooser.cc:
	Used the new dialog for managing the character codings directly 
	from the dialog file chooser.

2008-07-22  kitone  <kitone@gna.org>

	* src/main.cc:
	Fix: add 'noautosub' option to mplayer command.

2008-07-22  kitone  <kitone@gna.org>

	* src/main.cc:
	Fix: default value of columns-displayed.
	Rename "columns-display" to "columns-displayed".

2008-07-20  kitone  <kitone@gna.org>

	* src/DocumentSystem.cc:
	* src/DocumentSystem.h:
	Add function create_untitled_name. (from DocumentManagement.cc)
	
	* src/actions/DocumentManagement.cc:
	Remove function create_untitled_name.

	* src/actions/Transcript.cc:
	Fix: Add untitled name after the opening of the transcript.

2008-07-20  kitone  <kitone@gna.org>

	* src/SubtitleModel.cc:
	Fix: default time view value.

	* src/gui/DialogFileChooser.cc:
	Fix: remove subtitle filter from DialogExportText.

2008-07-20  kitone  <kitone@gna.org>

	* src/Encodings.h:
	Fix: gcc warning.
	
	* share/glade/Makefile.am:
	* share/glade/dialog-export-text.glade:
	* share/glade/dialog-import-text.glade:
	* share/glade/dialog-open-document.glade:
	* share/glade/dialog-save-document.glade:
	Add new files.

	* src/gui/DialogFileChooser.cc:
	* src/gui/DialogFileChooser.h:
	* src/gui/DialogUtility.cc:
	* src/gui/DialogUtility.h:
	Improved of the dialogs file chooser (glade files), clean code.
	Added option to open video directly with a subtitle.

	* src/actions/DocumentManagement.cc:
	Fix: #11938 (https://gna.org/bugs/?11938)